# trino-query-parser

./: .gitignore  Makefile  README.rst  pyproject.toml
.github/workflows/: release.yml  test.yml
src/trino_query_parser/: __init__.py  error.py  parser.py
tests/: test_parse_statement.py
