[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "trino-query-parser"
authors = [
    { name = "Gregory Borodin", email = "grihabor@gmail.com" },
]
description = "Provides a parser for trino queries"
readme = "README.rst"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "antlr4-python3-runtime==4.13.0",
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.optional-dependencies]
test = [
    'pytest',
]
